# prompting-press

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  about.toml  apm.lock.yaml  apm.yml  deny.toml  mise.toml  release-please-config.json  rust-toolchain-nightly.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
.agents/hooks/: quality-languages
.claude/: api-export-inventory-2026-07-01.md  apm-hooks.json  audit-docs-examples-2026-06-30.md  open-questions-2026-06-30.md
.claude/agents/: adversarial-challenger.md  pr-reviewer.md  speckit-research.md  speckit-sync-conflicts.md  speckit-sync.md  speckit-verify-tasks.md  speckit-verify.md
.claude/commands/: ai-review.md  compliance-check.md  full-review.md  multi-agent-review.md  pr-enhance.md  python-scaffold.md  rust-project.md  security-dependencies.md  security-hardening.md  security-sast.md  tdd-cycle.md  tdd-green.md  tdd-red.md  tdd-refactor.md  test-generate.md  xss-scan.md
.claude/rules/: 10-subagent-routing.md  50-speckit-workflow.md
.codex/: hooks.json
.codex/agents/: adversarial-challenger.toml  architect-review.toml  backend-architect.toml  backend-security-coder.toml  c-pro.toml  code-reviewer.toml  cpp-pro.toml  debugger.toml  django-pro.toml  fastapi-pro.toml  firmware-analyst.toml  frontend-developer.toml  frontend-security-coder.toml  golang-pro.toml  malware-analyst.toml  mobile-security-coder.toml  performance-engineer.toml  python-pro.toml  reverse-engineer.toml  rust-pro.toml  security-auditor.toml  tdd-orchestrator.toml  test-automator.toml  threat-modeling-expert.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  (+2 more)
.moon/: toolchains.yml  workspace.yml
.serena/: project.yml
.specify/: extensions.yml  feature.json  init-options.json  integration.json
ci/: about.hbs  moon.yml
conformance/: README.md  moon.yml
crates/prompting-press/: CHANGELOG.md  Cargo.toml  README.md  moon.yml
crates/prompting-press-core/: CHANGELOG.md  Cargo.toml  README.md  moon.yml
crates/prompting-press-core/scripts/: codegen.sh
crates/prompting-press-core/src/: agreement.rs  engine.rs  error.rs  generated.rs  hashing.rs  lib.rs  origin.rs  provenance.rs
crates/prompting-press-core/tests/: agreement.rs  excluded_features.rs  fuzz_properties.proptest-regressions  fuzz_properties.rs  fuzz_robustness.rs  hashing.rs  origin.rs  provenance.rs  render.rs  render_errors.rs  render_regression.rs  scaffold.rs
crates/prompting-press-core/tests/common/: mod.rs
crates/prompting-press-core/tests/fixtures/: README.md
crates/prompting-press-core/tests/fixtures/defs/: agreement-global.json  agreement-loop.json  agreement-namespace.json  agreement-nested.json  agreement-purity.json  agreement-set.json  conditional-loop.json  guard-mixed.json  hello.json  provenance-mixed.json  provenance-untrusted-only.json  render-loop-noniterable.json  unicode.json
crates/prompting-press-core/tests/fixtures/render/: conditional-loop.json  interpolation.json
crates/prompting-press-node/: CHANGELOG.md  Cargo.toml  README.md  moon.yml
crates/prompting-press-node/src/: check.rs  compose.rs  error.rs  lib.rs  marshal.rs  prompt.rs  registry.rs  render.rs
crates/prompting-press-py/: CHANGELOG.md  Cargo.toml  README.md  build.rs  moon.yml
crates/prompting-press-py/src/: check.rs  compose.rs  error.rs  lib.rs  marshal.rs  prompt.rs  registry.rs  render.rs
crates/prompting-press/scripts/: codegen.sh
crates/prompting-press/src/: check.rs  compose.rs  error.rs  generated.rs  lib.rs  prompt.rs  registry.rs  render.rs
crates/prompting-press/tests/: check.rs  check_purity.rs  compose.rs  conformance_goldens.rs  conformance_marshaling.rs  conformance_schema.rs  fuzz_prompt.rs  fuzz_scrub.rs  loader.rs  render.rs  render_validation.rs
crates/prompting-press/tests/common/: mod.rs
docs/: ci.md
docs/site/samples/python/: pyproject.toml
docs/site/samples/python/examples/: ask.yaml  assistant.json  getting-started_python_complete_example.py  getting-started_python_construct_from_definition.py  getting-started_python_construct_from_dict.py  getting-started_python_construct_from_text.py  getting-started_python_error_types.py  getting-started_python_render.py  getting-started_python_vars_model.py  guides_composition_append_validation.py  guides_composition_build.py  guides_composition_from_messages.py  guides_derive_add_variant.py  guides_derive_render_variant.py  guides_derive_replace_body.py  guides_derive_revalidation_error.py  guides_derive_setup.py  guides_guard_construct.py  guides_guard_enable.py  guides_guard_fully_rendered.py  guides_guard_override_advisory.py  guides_guard_override_rejected.py  guides_guard_route_multi.py  guides_guard_route_single.py  guides_lint-in-ci_prompts-lint-test.py  guides_metadata_reading_it_back.py  guides_variants_construct_inline.py  guides_variants_discover.py  guides_variants_select.py  summary_metadata.yaml
docs/site/samples/python/tests/: test_examples.py
docs/site/samples/rust/: Cargo.toml  run-examples.sh
docs/site/samples/rust/examples/: assistant.yaml  getting-started_rust_complete_example.rs  getting-started_rust_construct_from_definition.rs  getting-started_rust_construct_from_text.rs  getting-started_rust_declare_vars.rs  getting-started_rust_error_types.rs  getting-started_rust_render_and_read.rs  guard_enable.rs  guides_composition_build.rs  guides_derive_add_variant.rs  guides_derive_render_variant.rs  guides_derive_replace_body.rs  guides_derive_revalidation_error.rs  guides_derive_setup.rs  guides_guard_construct.rs  guides_guard_enable.rs  guides_guard_override_advisory.rs  guides_guard_override_rejected.rs  guides_guard_route_multi.rs  guides_guard_route_single.rs  guides_lint-in-ci_prompts-lint-test.rs  guides_metadata_reading_it_back.rs  guides_variants_construct_inline.rs  guides_variants_discover.rs  guides_variants_select.rs  summary.yaml  summary_metadata.yaml  summary_select.yaml
schemas/: moon.yml
(+484 files in other folders)
