# Virtual workspace root for the shared Rust core + per-language binding crates.
# No [package] here: this manifest defines only the workspace; member crates
# live under crates/* and are active workspace members.

[workspace]
members = ["crates/*"]
resolver = "2"

# Shared metadata inherited by member crates via `field.workspace = true`.
[workspace.package]
version = "0.0.0" # pre-release: nothing is published in spec 001
edition = "2021"
rust-version = "1.95" # MUST match rust-toolchain.toml + mise.toml (lockstep)
license = "Apache-2.0"
repository = "https://github.com/prompting-press/prompting-press"
authors = ["Sjors Robroek"]

# Shared dependency versions, referenced by member crates via `{ workspace = true }`.
# FFI deps (pyo3, napi) are intentionally absent: they are binding-crate-only and
# MUST NOT reach shared deps (constitution Principle II / C-02).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minijinja = { version = "2.21", default-features = false, features = ["builtins", "deserialization", "serde", "std_collections", "adjacent_loop_items"] }
sha2 = "0.11"
# TOML support for the `Prompt::from_toml` factories (R3 — serde-native, crates.io max_stable).
toml = "1.1.2"
