# prompting-press-core — the FFI-free engine kernel (constitution Principle II / C-02).
# This crate MUST NOT depend on pyo3 or napi, directly or transitively. A CI gate
# (`cargo tree -i pyo3` / `-i napi`) enforces that isolation.

[package]
name = "prompting-press-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://prompting-press.github.io/"
description = "FFI-free engine kernel for Prompting Press: typed, versioned, variant-aware prompt templates."

[lints]
workspace = true

# Default library crate-type (rlib): linked into the Rust consumer and binding crates.
[lib]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
minijinja = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
# Adversarial fuzzing suite (spec 009, T001). Exact pins; dev-only.
# proptest/arbitrary are pure-Rust and do NOT introduce any FFI dependency —
# `ci:check-ffi` stays green (constitution Principle II).
proptest = "1.11.0"
arbitrary = "1.4.2"
