# prompting-press — the public Rust consumer surface (FR-002).
# Idiomatic Rust API layered directly on the kernel. Like the kernel, this crate
# MUST stay FFI-free: no pyo3, no napi (constitution Principle II / C-02).

[package]
name = "prompting-press"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://prompting-press.github.io/"
description = "Public Rust consumer surface for Prompting Press, layered on the FFI-free kernel."

[lints]
workspace = true

[lib]

[dependencies]
# Full X.Y.Z version literal (NOT the 2-part "0.1"): release-please's Rust updater
# only rewrites intra-workspace dependency requirements that match its
# `version = "X.Y.Z"` regex. With the 2-part "0.1" it left this at ^0.1 while
# bumping prompting-press-core to 0.2.0 on the release branch, so `cargo update`
# failed ("failed to select a version for the requirement prompting-press-core =
# ^0.1"). The full "0.1.0" lets release-please bump it to "0.2.0" in lockstep.
# (cargo strips the `path` on publish and uses this version from crates.io.)
prompting-press-core = { path = "../prompting-press-core", version = "0.1.0" }
# serde/serde_json: dual-input loader (JSON arm) + the serialize bridge
# (Value::from_serialize at the validated-struct → kernel-value boundary).
# PromptDefinition shape is re-exported from prompting-press-core (relocated in spec 002).
# FFI-free; stays within the no-pyo3/no-napi rule (C-02).
serde = { workspace = true }
serde_json = { workspace = true }
# minijinja: consumer crate names minijinja::Value explicitly at the render boundary
# (validated-struct → kernel-value bridge via Value::from_serialize).
# The kernel already depends on minijinja; we reference the same workspace pin here
# so the consumer can name Value without re-declaring a separate version.
minijinja = { workspace = true }
# garde: native Rust validation framework for typed Vars (constitution Principle VI).
# features = ["derive", "serde"] — derive macros + serde integration; no extra validators.
garde = { version = "0.23", features = ["derive", "serde"] }
# serde_yaml_ng: YAML arm of the dual-input loader (Principle VII).
# serde_yaml is archived; serde_yaml_ng is the maintained successor.
serde_yaml_ng = "0.10"
# toml: TOML arm of the Prompt factories (research R3 — from_toml; serde-native via
# toml::from_str::<T>() with T: DeserializeOwned, same serde path as YAML/JSON arms).
# FFI-free; stays within the no-pyo3/no-napi rule (C-02) and the no-I/O rule (C-03).
toml = { workspace = true }

[dev-dependencies]
# Adversarial fuzzing suite (spec 009, T001). Exact pin; dev-only.
# proptest is pure-Rust; does NOT introduce any FFI dependency (constitution Principle II).
proptest = "1.11.0"
